Make sure canvas doesn't extend behind sidebar

--- a/client/src/css/_layout.scss
+++ b/client/src/css/_layout.scss
@@ -61,6 +61,7 @@ elements is easier in one separate file
   flex-grow:1;
   padding:25px;
   position:relative;
+  width:calc(100% - 360px);
 }
 
 #bottom-content-wrapper {
